--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tokio = { version = "1.36.0", features = ["full"] }
 urlencoding = "2.1.3"
 rustls-pemfile = "2.1.2"
 log = "0.4.21"
+rayon = "1.10.0"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52.0"
