--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,11 +23,12 @@ scraper = "0.19.0"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 sqlx = { version = "0.7.3", features = ["postgres", "chrono", "runtime-tokio"] }
-tokio = { version = "1.36.0", features = ["full"] }
+tokio = { version = "1.36.0", features = ["full", "tracing"] }
 urlencoding = "2.1.3"
 rustls-pemfile = "2.1.2"
 log = "0.4.21"
 rayon = "1.10.0"
+console-subscriber = "0.2.0"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52.0"
