--- a/config.json
+++ b/config.json
@@ -15,5 +15,6 @@
   "minimum_quality": "720p",
   "youtube_api_key": "",
   "tmdb_api_key": "",
-  "watchlist_recheck_interval_hours": 6
+  "watchlist_recheck_interval_hours": 6,
+  "trackers": []
 }
