--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,4 +18,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           RUSTTARGET: ${{ matrix.target }}
+          TOOLCHAIN_VERSION: stable
           EXTRA_FILES: "README.md LICENSE config.json static/*"
