--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,4 +20,4 @@ jobs:
         with:
           RUSTTARGET: ${{ matrix.target }}
           TOOLCHAIN_VERSION: stable
-          EXTRA_FILES: "README.md LICENSE config.json static/* static/icons/* static/icons/ios/* static/icons/android/*"
+          EXTRA_FILES: "README.md LICENSE config.json static/favicon.ico static/index.html static/manifest.json static/styles.css"
