--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,5 +33,5 @@ console-subscriber = "0.2.0"
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52.0"
 
-[target.'cfg(target_os = "linux")'.dependencies]
+[target.'cfg(unix)'.dependencies]
 xmltree = "0.10.3"
