--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,9 +29,13 @@ rustls-pemfile = "2.1.2"
 log = "0.4.21"
 rayon = "1.10.0"
 console-subscriber = "0.2.0"
+plist = "1.6.1"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52.0"
 
 [target.'cfg(unix)'.dependencies]
 xmltree = "0.10.3"
+
+[target.'cfg(macos)'.dependencies]
+plist = "1.6.1"
