--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,13 @@ env_logger = "0.11.2"
 futures = "0.3.30"
 qbittorrent = { git = "https://github.com/0xlunar/qbittorrent.git", rev = "58015db" }
 regex = "1.10.3"
-reqwest = "0.11.24"
+reqwest = { version = "0.12.5", features = ["blocking"] }
 ring = "0.17.8"
 rustls = { version = "0.22.3" }
 scraper = "0.19.0"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
-sqlx = { version = "0.7.3", features = ["postgres", "chrono", "runtime-tokio"] }
+sqlx = { version = "0.7.3", features = ["postgres", "chrono", "runtime-tokio", "uuid"] }
 tokio = { version = "1.36.0", features = ["full", "tracing"] }
 urlencoding = "2.1.3"
 rustls-pemfile = "2.1.2"
@@ -30,6 +30,11 @@ log = "0.4.21"
 rayon = "1.10.0"
 console-subscriber = "0.2.0"
 plist = "1.6.1"
+futures-util = "0.3.30"
+transmission = { version = "0.3.1", optional = true }
+oauth2 = "5.0.0-alpha.4"
+base64 = "0.22.1"
+actix-session = { version = "0.10.0", features = ["cookie-session"] }
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52.0"
@@ -39,3 +44,6 @@ xmltree = "0.10.3"
 
 [target.'cfg(macos)'.dependencies]
 plist = "1.6.1"
+
+[features]
+transmission = ["dep:transmission"]
