--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ transmission = { version = "0.3.1", optional = true }
 oauth2 = "5.0.0-alpha.4"
 base64 = "0.22.1"
 actix-session = { version = "0.10.0", features = ["cookie-session"] }
+log4rs = "1.3.0"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52.0"
