--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,7 @@
 on:
   push:
-    branches: [ main ]
-    paths:
-      - "src/**"
-      - ".github/workflows/**"
+    tags:
+      - "v*.*.*"
 
 jobs:
   release:
