--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ rustls-pemfile = "2.1.2"
 log = "0.4.21"
 rayon = "1.10.0"
 console-subscriber = "0.2.0"
+transmission-rpc = "0.4.3"
+url = "2.5.0"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52.0"
