--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ env_logger = "0.11.2"
 futures = "0.3.30"
 qbittorrent = { git = "https://github.com/0xlunar/qbittorrent.git", rev = "58015db" }
 regex = "1.10.3"
-reqwest = "0.12.7"
+reqwest = { version = "0.12.7", features = ["rustls-tls"] }
 ring = "0.17.8"
 rustls = { version = "0.22.3" }
 scraper = "0.19.0"
